--- a/package.json
+++ b/package.json
@@ -8,36 +8,35 @@
     "@fontsource/roboto": "^5.0.13",
     "@formspree/react": "^2.5.1",
     "@mui/icons-material": "^5.15.17",
-    "@mui/material": "^5.15.17",
+    "@mui/material": "^5.16.1",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@react-pdf-viewer/core": "^3.12.0",
-    "@react-pdf-viewer/default-layout": "^3.12.0",
-    "@react-pdf/renderer": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.1.3",
-    "pdf-viewer-reactjs": "^2.2.3",
-    "pdfjs-dist": "^4.4.168",
+    "buffer": "^6.0.3",
+    "dotenv": "^16.4.5",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-github-calendar": "^3.2.2",
     "react-icons": "^4.8.0",
     "react-parallax-tilt": "^1.7.42",
-    "react-pdf": "^0.0.10",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
     "react-tsparticles": "^1.42.2",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.11",
     "typewriter-effect": "^2.18.2",
+    "vm-browserify": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -67,6 +66,9 @@
   "author": "Vinay",
   "license": "ISC",
   "devDependencies": {
-    "ajv": "^8.7.1"
+    "crypto-browserify": "^3.12.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "react-app-rewired": "^2.2.1"
   }
 }
